# rusky

./: .cursorrules  Cargo.toml  LICENSE  README.md  TESTING.md  install.js  package.json  test_file.txt  uninstall.js
.rusky/: config.json
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: cli.rs  config.rs  git.rs  hooks.rs  main.rs
tests/: integration_tests.rs
