[package]
name = "rusky"
version = "0.1.0"
edition = "2021"
description = "Fast Git hooks manager written in Rust - A high-performance alternative to husky"
license = "MIT"
authors = ["Dan <dan@example.com>"]
repository = "https://github.com/dan/rusky"
keywords = ["git", "hooks", "husky", "rust", "npm"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rusky"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
colored = "2.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"
